// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
<glamorous(input)
  type="text"
>
  <input
    className="css-opcxs3"
    type="text"
  />
</glamorous(input)>
`;

exports[`enzyme.render 1`] = `
<input
  class="css-opcxs3"
  type="text"
>
  
</input>
`;

exports[`enzyme.shallow 1`] = `
<input
  className="css-opcxs3"
  type="text"
/>
`;
